# physi-sim

./: .gitignore  CMakeLists.txt  README.md
.github/: cd.yml
.github/workflows/: cd.yml  ci.yml
docs/: main.tex
docs/chapters/: 01_foundation.tex  02_performance.tex  03_strategic_edge.tex
include/: .IComputeBackend.hpp.swp  IComputeBackend.hpp  LBMSolver.hpp  MockBackend.hpp
include/io/: IResultWriter.hpp  VTKWriter.hpp
include/thermal/: IThermalSolver.hpp  LinearDummySolver.hpp
python/physi_sim/: analyze_1d.py
src/: main.cpp
src/io/: VTKWriter.cpp
src/thermal/: LinearDummySolver.cpp
tests/: test_io.cpp  test_solver.cpp
